# codebase-semantic-search

./: .codebaseignore  .gitignore  CLAUDE.md  LISENCE  README.md  create_tables.sql  pyproject.toml  pytest.ini  run_integration_tests.py
lua/: codebase-semantic-search.lua
plugin/: codebase-semantic-search.lua
src/codebase/: cli.py  config.py  indexing.py  mcp_server.py  model_provider.py  pgvector.py  search.py  ts_chunk.py
tests/: conftest.py  test_git_integration.py  test_indexing.py  test_mcp_integration.py  test_mcp_server.py
