[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase"
version = "0.1.0"
authors = [
    { name="Yinzuo Jiang", email="jiangyinzuo@foxmail.com" },
]
description = "A command-line tool for indexing and searching codebase."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "psycopg[binary]",
    "sentence_transformers",
    "tree_sitter",
    "jsonc-parser",
    "tabulate",
    "mcp[cli]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
# 定义全局可执行脚本
# 格式为: <命令名> = "<包名>.<模块名>:<函数名>"

# 运行 codebase 命令时，会执行 codebase.cli 模块的 main() 函数
"codebase" = "codebase.cli:main"

# MCP server for codebase semantic search
"codebase-mcp" = "codebase.mcp_server:main"
